--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
   <!-- Title -->
-  <title>Iniciar Sesión</title>
+  <title>Login</title>
 </head>
 <body>
   <header class="header">
@@ -19,29 +19,29 @@
   </header>
   <section class="login">
       <section class="login__container">
-        <h2>Inicia sesión</h2>
+        <h2>Login</h2>
         <form class="login__container--form">
           <input class="input" type="text" placeholder="Correo">
           <input class="input" type="password" placeholder="Contraseña">
-          <button class="button">Iniciar sesión</button>
+          <button class="button">Start</button>
           <div class="login__container--remember-me">
             <label>
               <input type="checkbox" name="" id="cbox1" value="checkbos">Recuérdame
             </label>
-            <a href="/">Olvidé mi contraseña</a>
+            <a href="/">Forgot my password</a>
           </div>
         </form>
         <section class="login__container--social-media">
           <div><img src="./assets/icons/google-icon.png" alt="Google">Inicia sesión con Google</div>
           <div><img src="./assets/icons/twitter-icon.png" alt="Twitter">Inicia sesión con Twitter</div>
         </section>
-        <p class="login__container--register">No tienes ninguna cuenta <a href="">Regístrate</a></p>
+        <p class="login__container--register">Don't have an account <a href="">Sign up</a></p>
       </section>
   </section>
   <footer class="footer">
-    <a href="/">Términos de uso</a>
-    <a href="/">Declaración de privacidad</a>
-    <a href="/">Centro de ayuda</a>
+    <a href="/">Terms of use</a>
+    <a href="/">Privacy</a>
+    <a href="/">Help</a>
   </footer>
 </body>
 </html>
