--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header class="header"> 
+        <!--TODO: look for a new logo-->
         <img class="header__img" src="./assets/images/logo-platzi-video-BW2.png" alt="logo">
         <nav class="header__menu">
             <div class="header__menu--profile">
