--- a/signup.html
+++ b/signup.html
@@ -9,34 +9,31 @@
   <!-- Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
   <!-- Title -->
-  <title>Login</title>
+  <title>Register</title>
 </head>
 <body>
   <header class="header">
     <a href="./index.html">
-      <!--TODO: look for a new logo-->
+        <!--TODO: look for a new logo-->
         <img class="header__img" src="./assets/images/logo-platzi-video-BW2.png" alt="Platzi Video">
     </a>
   </header>
   <section class="login">
       <section class="login__container">
-        <h2>Login</h2>
+        <h2>Register</h2>
         <form class="login__container--form">
-          <input class="input" type="text" placeholder="Correo">
-          <input class="input" type="password" placeholder="Contraseña">
-          <button class="button">Start</button>
-          <div class="login__container--remember-me">
-            <label>
-              <input type="checkbox" name="" id="cbox1" value="checkbos">Remember me
-            </label>
-            <a href="/">Forgot my password</a>
-          </div>
+            <input class="input" type="text" placeholder="First Name">
+            <input class="input" type="text" placeholder="Last Name">
+            <input class="input" type="text" placeholder="E-mail">
+            <input class="input" type="password" placeholder="Password">
+            <input class="input" type="password" placeholder="Re-type password">
+            <input class="input" type="text" placeholder="Phone number">
+            <button class="button">Sign up</button>
         </form>
         <section class="login__container--social-media">
-          <div><img src="./assets/icons/google-icon.png" alt="Google">Inicia sesión con Google</div>
-          <div><img src="./assets/icons/twitter-icon.png" alt="Twitter">Inicia sesión con Twitter</div>
+          <div><img src="./assets/icons/google-icon.png" alt="Google">Register with Google</div>
+          <div><img src="./assets/icons/twitter-icon.png" alt="Twitter">Register with Twitter</div>
         </section>
-        <p class="login__container--register">Don't have an account <a href="./signup.html">Sign up</a></p>
       </section>
   </section>
   <footer class="footer">
