--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
   </header>
   <section class="login">
       <section class="login__container">
-        <h2>Register</h2>
+        <h2 class="title">Register</h2>
         <form class="login__container--form">
             <input class="input" type="text" placeholder="First Name">
             <input class="input" type="text" placeholder="Last Name">
