--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <!-- <link rel="stylesheet" href="./styles/styles.css"> -->
     <title>My Gallery</title>
 </head>
 <body>
@@ -27,5 +27,6 @@
         <input class="search-input" type="text" placeholder="Search ...">
     </section>
     
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
