--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <!-- Styles -->
-  <link rel="stylesheet" href="./styles/styles.css">
+  <!-- <link rel="stylesheet" href="./styles/styles.css"> -->
   <!-- Title -->
   <title>Login</title>
 </head>
@@ -44,5 +44,7 @@
     <a href="/">Privacy</a>
     <a href="/">Help</a>
   </footer>
+
+  <script src="./dist/bundle.js"></script>
 </body>
 </html>
